syntax = "proto3";

package service.category.v1;

option csharp_namespace = "LightOps.Commerce.Proto.Services.Category.V1";

import "google/protobuf/wrappers.proto";

/*************
 * Models
 *************/
message ProtoCategory {
  string id = 1;
  string handle = 2;
  string url = 3;

  google.protobuf.StringValue parent_category_id = 4;

  string title = 5;
  string type = 10;
  string description = 6;

  string seo_title = 7;
  string seo_description = 8;

  string primary_image = 9;
}

/*************
 * Services
 *************/
service ProtoCategoryService {
  rpc GetCategory(ProtoGetCategoryRequest) returns (ProtoGetCategoryResponse) {}
  rpc GetCategoriesByIds(GetCategoriesByIdsRequest) returns (GetCategoriesByIdsResponse) {}
  rpc GetCategoriesByHandles(GetCategoriesByHandlesRequest) returns (GetCategoriesByHandlesResponse) {}

  rpc GetCategoriesByParentId(ProtoGetCategoriesByParentIdRequest) returns (ProtoGetCategoriesByParentIdResponse) {}
  rpc GetCategoriesByParentIds(ProtoGetCategoriesByParentIdsRequest) returns (ProtoGetCategoriesByParentIdsResponse) {}

  rpc GetCategoriesByRoot(ProtoGetCategoriesByRootRequest) returns (ProtoGetCategoriesByRootResponse) {}
  rpc GetCategoriesBySearch(ProtoGetCategoriesBySearchRequest) returns (ProtoGetCategoriesBySearchResponse) {}
}

/*************
 * Service Models
 *************/
// GetCategory
message ProtoGetCategoryRequest {
  oneof identifier {
    string id = 1;
    string handle = 2;
  }
}

message ProtoGetCategoryResponse {
  ProtoCategory category = 1;
}

// GetCategoriesByIds
message GetCategoriesByIdsRequest {
  repeated string ids = 1;
}

message GetCategoriesByIdsResponse {
  repeated ProtoCategory categories = 1;
}

// GetCategoriesByHandles
message GetCategoriesByHandlesRequest {
  repeated string handles = 1;
}

message GetCategoriesByHandlesResponse {
  repeated ProtoCategory categories = 1;
}

// GetCategoriesByParentId
message ProtoGetCategoriesByParentIdRequest {
  string parent_id = 1;
}

message ProtoGetCategoriesByParentIdResponse {
  repeated ProtoCategory categories = 1;
}

// GetCategoriesByParentIds
message ProtoGetCategoriesByParentIdsRequest {
  repeated string parent_ids = 1;
}

message ProtoGetCategoriesByParentIdsResponse {
  repeated ProtoCategory categories = 1;
}

// GetCategoriesByRoot
message ProtoGetCategoriesByRootRequest {

}

message ProtoGetCategoriesByRootResponse {
  repeated ProtoCategory categories = 1;
}

// GetCategoriesBySearch
message ProtoGetCategoriesBySearchRequest {
  string search_term = 1;
}

message ProtoGetCategoriesBySearchResponse {
  repeated ProtoCategory categories = 1;
}
